# aerolab

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  todo.md
apps/api/: .env.example  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  start.py
apps/api/aerolab_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/data/: validation_report.json
apps/api/data/knowledge/: summary_Writer_1b34a27f-ef70-4178-a1ab-45a12ff2fe74.md
apps/api/scripts/: validate_platform.py  validation_report.json
apps/api/src/: __init__.py  __main__.py
apps/api/src/agents/: __init__.py  autotuning.py  base_agent.py  benchmarks.py  builder.py  dynamic_tuning.py  ensemble.py  guardrails.py  memory.py  planning.py  self_healing.py  skills.py  telemetry.py  testing.py  versioning.py
apps/api/src/audit/: __init__.py  logger.py  models.py
apps/api/src/auth/: __init__.py  deps.py  jwt.py  multitenancy.py  rbac.py  sso.py
apps/api/src/billing/: __init__.py  billing.py  metering.py  plans.py  pricing.py  types.py
apps/api/src/chat/: __init__.py  service.py
apps/api/src/compliance/: __init__.py  encryption.py  gdpr.py
apps/api/src/config/: __init__.py  env_validator.py  llm_catalog.json  llm_catalog.py  llm_models.py  settings.py
apps/api/src/dashboard/: __init__.py  server.py  service.py
apps/api/src/domain_studio/: README.md  __init__.py
apps/api/src/domains/: __init__.py
apps/api/src/enterprise/: __init__.py  multiregion.py  sso.py  types.py  whitelabel.py
apps/api/src/events/: __init__.py  webhooks.py
apps/api/src/flow_studio/: ARCHITECTURE.md  README.md  __init__.py  engine.py  executor.py  types.py  validation.py
apps/api/src/hitl/: __init__.py  models.py  repo.py
apps/api/src/marketplace/: __init__.py  marketplace.py  publisher.py  search.py  types.py
apps/api/src/mcp/: __init__.py  client.py  registry.py  server.py  transports.py  types.py
apps/api/src/middleware/: __init__.py  rate_limit.py
apps/api/src/observability/: __init__.py  grafana.py  health.py  logging.py  metrics.py  tracing.py
apps/api/src/os/: __init__.py  builder.py  builder_new.py
apps/api/src/persistence/: __init__.py  backup.py  postgres.py  redis_cache.py
apps/api/src/rag/: __init__.py  service.py
apps/api/src/rules/: __init__.py  engine.py  feedback.py  types.py  validators.py
apps/api/tests/: conftest.py  test_api.py  test_billing_marketplace.py  test_enterprise.py  test_flow_studio.py  test_health.py  test_integrations.py  test_modules.py  test_new_components.py  test_openapi_smoke.py  test_stress.py  test_v2_modules.py  test_validation.py
(+708 files in other folders)
