[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerolab-api"
version = "1.0.0"
description = "AeroLab API - Multi-Agent AI Platform Backend"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["aerolab", "agno", "ai", "agents", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "agno>=2.0.0",
    "fastapi>=0.115.13",
    "groq>=0.28.0",
    "openai>=1.88.0",
    "anthropic>=0.40.0",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "tavily-python>=0.7.7",
    "uvicorn[standard]>=0.34.3",
    "yfinance>=0.2.63",
    "pyjwt>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
rag = [
    "chromadb>=1.0.13",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
]
# Domínios especializados
geo = [
    "requests>=2.31.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "folium>=0.15.0",
]
database = [
    "pandas>=2.0.0",
    "duckdb>=0.10.0",
]
devops = [
    "PyGithub>=2.1.0",
    "requests>=2.31.0",
]
finance = [
    "yfinance>=0.2.63",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
]
legal = [
    "spacy>=3.7.0",
    "pdfplumber>=0.10.0",
]
corporate = [
    "pandas>=2.0.0",
]
# Novos domínios
research = [
    "tavily-python>=0.7.7",
    "requests>=2.31.0",
]
llm = [
    "requests>=2.31.0",
]
# Bundles
all-domains = [
    "aerolab-api[geo,database,devops,finance,legal,corporate,research,llm,rag]",
]
full = [
    "aerolab-api[all-domains,dev]",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Strict mode gradual - começar com módulos menores
strict = false
# Módulos com tipagem strict
[[tool.mypy.overrides]]
module = [
    "src.config.*",
    "src.auth.*",
]
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"
pythonpath = ["."]
